Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42389

QOpenGLWidget don't receive anymore mouse events once touch events are received from the trackpad

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.4.0 Beta
    • GUI: OpenGL
    • Yosemite, Qt 5.4 (build from November 1st)
    • macOS

    Description

      This might be Yosemite specific, not sure about that. It doesn't happen on Windows for sure, even with a touch screen.
      My application is using QOpenGLWidgets, and theses QOpenGLWidgets detects touch events. Once the trackpad is used to navigate through theses widgets (double fingers gestures), at some point the widget completely loose mouse focus, and it doesn't get it back no matter what part of the application is clicked.

      I attached a video a tester sent me showing the problem: zooming/panning using the application controls (the timeline on the top for example) is no problem and the tools reacts properly (setMouseTracking is always set to true), but as soon as he use the trackpad (sending touch events), after a few seconds the focus is completely lost, no tools react, meaning no more mouse events are received in QOpenGLWidgets. The other non-opengl widgets reacts properly to mouse events.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            divide Robin Lobel
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes